--- a/Grocery_List_App/index.html
+++ b/Grocery_List_App/index.html
@@ -1,48 +1,92 @@
 <!DOCTYPE html>
-<html>
-    <head lang="en">
-        <meta charset="UTF-8">
-        <title>Shared Groceries</title>
-        <script src="js/angular.min.js"></script>
-        <script src="js/app.js"></script>
-        <script src="js/xeditable.js"></script>
-        <link href="css/xeditable.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="shortcut icon" type="image/png" href="img/check.png"/>
-
-
-    </head>
-    <body ng-app="myApp" class="clearfix">
-        <main ng-controller="GroceryController">
-            <h1>Shared Groceries <img src="img/check.png" height="50" width="50"></h1>
+<html ng-app="myApp" >
+<head lang="en">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--Title -->
+    <title>Shared Groceries</title>
+    <!--Scripts -->
+    <script src="js/angular.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/connect.js"></script>
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/npm.js"></script>
+    <script src="jquery/jquery-ui.min.js"></script>
+    <script src="js/bootstrap-editable.min.js"></script>
+    <!-- Links -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css.map" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css.map" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="jquery/jquery-ui.min.css">
+    <link rel="stylesheet" href="jquery/jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="jquery/jquery-ui.theme.min.css">
+    <link href="css/bootstrap-editable.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="shortcut icon" type="image/png" href="img/check.png"/>
+</head>
+    <body class="clearfix">
+        <!--<main ng-controller="GroceryController">
+            <h1>Shared Groceries <img src="img/check.png" height="40" width="40"></h1>
             <section>
-                <button onclick="window.location.href='index.html'">Home</button>
-                <button onclick="window.location.href='login.html'">Login</button>
-                <button onclick="window.location.href='signup.html'">Signup</button>
+                <button class="ui-state-default" onclick="window.location.href='index.html'">Home</button>
+                <button class="ui-state-default" onclick="window.location.href='login.html'">Login</button>
+                <button class="ui-state-default" onclick="window.location.href='signup.html'">Signup</button>
             </section>
-                <div id="fix">
-                    <form ng-submit="addItem()">
-                        <div>
-                            <input type="text" ng-model="newItem" placeholder="Add Grocery Item"/>
-                            <button id="submit" type="submit">Save</button>
-                        </div>
-                    </form>
-                 </div>
-            <p>{{ newItem }}</p>
+            <div id="fix">
+                <form ng-submit="addItem()">
+                    <div>
+                        <input type="text" ng-model="newItem" placeholder="Add Grocery Item"/>
+                        <button id="submit" type="submit">Save</button>
+                    </div>
+                </form>
+            </div>
             <div id="bottom">
                 <h4>Grocery List</h4>
-                <table>
-                    <tr ng-repeat="gro in groceries" editable-text=groceries e-form="textBtnForm" >{{ groceries ||
-                        'empty' }}
+                <table id="sortable">
+
+                    <tr ng-repeat="gro in groceries"  >
+                        {{ groceries || 'empty' }}
                         <td>{{gro}}</td>
-                        <td>
+                        <td >
                             <button ng-click="removeItem(gro)">Delete</button>
-                            <div ng-controller="TextBtnCtrl">
-                                    <button class="btn btn-default" ng-click="textBtnForm.$show()" ng-hide="textBtnForm.$visible">
+                            <div >
+                                <button class="btn btn-default">
                                     Edit
                                 </button>
                             </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </main>-->
+
+        <main ng-controller="GroceryController">
+            <h1>Shared Groceries <img src="img/check.png" height="40" width="40"></h1>
+            <section>
+                <button class="ui-state-default" onclick="window.location.href='index.html'">Home</button>
+                <button class="ui-state-default" onclick="window.location.href='login.html'">Login</button>
+                <button class="ui-state-default" onclick="window.location.href='signup.html'">Signup</button>
+            </section>
+            <div id="fix">
+                <form ng-submit="addItem()">
+                    <div>
+                        <input type="text" ng-model="newItem" placeholder="Add Grocery Item"/>
+                        <button id="submit" type="submit">Save</button>
+                    </div>
+                </form>
+            </div>
+            <p>{{ newItem }}</p>
+            <div>
+                <h4>Grocery Items {{ groceries.length }}</h4>
+                <table>
+                    <tr ng-repeat="gro in groceries">
+                        <td>{{gro}}</td>
+                        <td>
+                            <button ng-click="removeItem(gro)">&times;</button>
                         </td>
                     </tr>
                 </table>
