--- a/Grocery_List_App/login.html
+++ b/Grocery_List_App/login.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Title -->
     <title>Shared Groceries</title>
+
+    <!--Scripts -->
     <script src="js/angular.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/connect.js"></script>
+    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="js/npm.js"></script>
     <script src="js/xeditable.js"></script>
-    <link href="css/xeditable.css" rel="stylesheet">
+    <script src="jquery/jquery-ui.min.js"></script>
+
+    <!-- Links -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css.map" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css.map" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link href="css/xeditable.css" rel="stylesheet">
+    <link rel="stylesheet" href="jquery/jquery-ui.min.css">
+    <link rel="stylesheet" href="jquery/jquery-ui.structure.min.css">
+    <link rel="stylesheet" href="jquery/jquery-ui.theme.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" type="image/png" href="img/check.png"/>
-    
-
 </head>
+
 <body ng-app="myApp" class="clearfix">
 <main ng-controller="GroceryController">
-    <h1>Shared Groceries <img src="img/check.png" height="50" width="50"></h1>
+    <h1>Shared Groceries <img src="img/check.png" height="40" width="40"></h1>
     <section>
         <button onclick="window.location.href='index.html'">Home</button>
         <button onclick="window.location.href='login.html'">Login</button>
