--- a/Grocery_List_App/signup.html
+++ b/Grocery_List_App/signup.html
@@ -4,10 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!--Title -->
     <title>Shared Groceries</title>
-
     <!--Scripts -->
     <script src="js/angular.min.js"></script>
     <script src="js/app.js"></script>
@@ -15,19 +13,21 @@
     <script src="js/connect.js"></script>
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/npm.js"></script>
-    <script src="js/xeditable.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/passport.js"></script>
+    <script src="js/auth.js"></script>
     <script src="jquery/jquery-ui.min.js"></script>
-
+    <script src="js/bootstrap-editable.min.js"></script>
     <!-- Links -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css.map" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="css/bootstrap-theme.min.css.map" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <link href="css/xeditable.css" rel="stylesheet">
     <link rel="stylesheet" href="jquery/jquery-ui.min.css">
     <link rel="stylesheet" href="jquery/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery/jquery-ui.theme.min.css">
+    <link href="css/bootstrap-editable.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" type="image/png" href="img/check.png"/>
 </head>
@@ -35,9 +35,9 @@
 <main ng-controller="GroceryController">
     <h1>Shared Groceries <img src="img/check.png" height="40" width="40"></h1>
     <section>
-        <button onclick="window.location.href='index.html'">Home</button>
-        <button onclick="window.location.href='login.html'">Login</button>
-        <button onclick="window.location.href='signup.html'">Signup</button>
+        <button class="ui-state-default" onclick="window.location.href='index.html'">Home</button>
+        <button class="ui-state-default" onclick="window.location.href='login.html'">Login</button>
+        <button class="ui-state-default" onclick="window.location.href='signup.html'">Signup</button>
     </section>
     <div>
         <h4>Signup</h4>
@@ -47,9 +47,14 @@
             Username: <input class="box" type="text" name="username"><br>
             Password: <input class="box" type="password" name="password"><br>
             Retype Password: <input class="box" type="password" name="password"><br>
-            <input class="checkbox" type="checkbox" name="check" value="off"/> <small>I agree to the <a href="#">Terms &
-            Conditions</a></small><br>
+            <section class="checkbox" > <input type="checkbox" name="check" value="off"/>
+                <small>I agree to the <a href="#">Terms & Conditions</a></small><br>
+            </section><br>
+
             <input class="button" type="submit" value="Signup"/>
+            <!--==== Facebook ====-->
+            <p>Login or Register with:</p>
+            <a href="js/auth.js" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
         </form>
     </div>
     <!--==== End of Form ====-->
